--- a/index.html
+++ b/index.html
@@ -4,22 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>coding.exe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <button class="button"><h2>JOIN</h2></button>
-        <button class="button"><h2>ABOUT</h2></button>
-        <button class="button"><h2>NETWORK</h2></button>
-        <img src="logo.png" class="logo">
-        <img src="menu2.png" class="menu">
-    </nav>
-    <div class="welcome">
-        <h1 class="first">Welcome bro!</h1>
-        <p>If you are a web developer, I promise you that you are in the right place.<br/>Here you have a direct link for other developers like you <br/>But remember something, this is just a prototype<br/><br/>
-        <b>I need your <a href="#">support</a> to really make this</b> </I></p><br/>
-        <b>Built with <b class="love">Love</b> by Kasi</b>
-    </div>
+    <nav id="navigation"><img src="logo.png"></nav>
+    <section id="section1">
+        <h1 id="welcome"></h1>
+        <h1 id="text1"></h1>
+        <h1 id="text2"></h1>
+        <h1 id="text3"></h1>
+    </section>
+    <script src="script.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
