--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="welcome"></h1>
         <h1 id="text1"></h1>
         <h1 id="text2"></h1>
-        <h1 id="text3"></h1>
+        <audio id="audio" src="boot.mp3"></audio>
     </section>
     <script src="script.js"></script>
 </body>
